--- a/KosaESS/src/main/resources/templates/manager_post_list.html
+++ b/KosaESS/src/main/resources/templates/manager_post_list.html
@@ -69,7 +69,7 @@
 			<!-- End 검색 필터 부분 -->
 
 			<!-- 게시글 리스트 -->
-			<div>
+			<div class="content_list">
 				<!-- 총 게시글 개수와 선택삭제 버튼 -->
 				<div class="post_detail_wrap">
 					<!-- 총 게시글 -->
