--- a/KosaESS/src/main/resources/templates/include/manager_subbar.html
+++ b/KosaESS/src/main/resources/templates/include/manager_subbar.html
@@ -15,7 +15,7 @@
 				th:src="@{/img/open.png}"></i>
 		</div>
 		<ul class="nav-list">
-			<li><a th:href="@{/__${session.role}__/main}"> <i class='bx bx-grid-alt'> <img
+			<li><a th:href="@{/__${session.role}__}"> <i class='bx bx-grid-alt'> <img
 						th:src="@{/img/main_white.png}">
 				</i> <span class="links_name">메인</span>
 			</a> <span class="tooltip">메인</span></li>
@@ -67,8 +67,8 @@
 				<div class="profile-details">
 					<img th:src="@{/img/manager_navy.png}" alt="profileImg">
 					<div class="name_job">
-						<div class="name" th:text="${session.id}">Id</div>
-						<div class="job" th:text="${session.role}">Role</div>
+						<div class="name" th:text="${session.userEmail}">userEmail</div>
+						<div class="job" th:text="${session.lastLoginDt}">lastLoginDt</div>
 					</div>
 				</div> <i class='bx bx-log-out' id="log_out"></i>
 			</li>
